Новые фаилы урок 6

--- a/css/style.css
+++ b/css/style.css
@@ -470,23 +470,40 @@ template {
       color: black; }
 
 #goods {
-  width: 290px;
+  width: 500px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; }
 
 .card {
-  width: 120px;
+  width: 200px;
   padding: 10px;
   text-align: center;
   border: 1px dashed black;
   margin-bottom: 10px; }
 
 .imgPrice {
-  width: inherit;
-  height: 100px; }
+  width: inherit; }
+
+.price {
+  font-size: 30px; }
+
+.itemh2 {
+  font-size: 20px; }
+
+.alert {
+  display: none;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(3, 3, 3, 0.8); }
 
 body {
+  position: relative;
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
